--- a/CalculatorApp/index.html
+++ b/CalculatorApp/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +13,9 @@
             <input type="text" id="screen" value="">
         </div>
         <div class="firstRow">
-            <input type="button" id="CLEAR" value="CLEAR">
+            <input type="button" id="CLEAR" value="C">
+            <input   class="mathButton" type="button" id="OPENBRACKET" value="(">
+            <input   class="mathButton" type="button" id="CLOSEDBRACKET" value=")">
             <input type="button" id="DIVIDE" value="/">
         </div>
         <div class="secondRow">
@@ -34,9 +37,20 @@
             <input   class="signButton" type="button" id="PLUS" value="+">
         </div>
         <div class= "fifthRow">
+            <input   class="mathButton"type="button" id="ENG" value="ENG">
             <input   class="numButton"type="button" id="ZERO" value="0">
             <input  class="numButton"  type="button" id="POINT" value=".">
             <input   class="signButton" type="button" id="EQUALS" value="=">
+        </div>
+        <div class= "engPanel hide">
+            <div class="engFirstrow">
+                <input   class="mathButton" type="button" id="PI" value="PI">
+                <input   class="mathButton" type="button" id="E" value="E">
+                <input   class="mathButton" type="button" id="ABS" value="|x|">
+                <input   class="mathButton" type="button" id="SQUARE" value="x ^ 2">
+                <input   class="mathButton" type="button" id="CUBE" value="x ^ 3">
+                
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
