minor improvements in VisaApp

--- a/VisaToOmerikaApp/public/index.html
+++ b/VisaToOmerikaApp/public/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <div class="prepSpace">
             <div class="inputSpace">
+                <p id="error"></p>
             <input type="text" id="name">
             <input id = 'generateName'type="button" value="generate">
 
@@ -31,6 +32,9 @@
                 <input id = 'initButton'type="button" value="init">
                 <input id = 'raceButton'type="button" value="race">
                 <input id = 'clearButton'type="button" value="clear">
+            </div>
+            <div class="canvas">
+                <p id="winner"></p>
             </div>
         </div>
     </div>
