--- a/VisaToOmerikaApp/public/index.html
+++ b/VisaToOmerikaApp/public/index.html
@@ -38,6 +38,6 @@
             </div>
         </div>
     </div>
-    <script src="../src/index.js"></script>
+    <script src="../src/js/index.js"></script>
 </body>
 </html>
